//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Article {
  id Int [pk, increment]
  slug String [unique, not null]
  title String [not null]
  description String [not null]
  body String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  addedBy users [not null]
  userId Int [not null]
  favorites users [not null]
}

Table users {
  id Int [pk, increment]
  email String [unique, not null]
  username String [unique, not null]
  password String [not null]
  image String [default: 'http://54.80.47.120:5001/logo.png']
  bio String
  articles Article [not null]
  favorites Article [not null]
  followedBy users [not null]
  following users [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  songs songs [not null]
  playlists Playlist [not null]
  albums Album [not null]
  artists artists [not null]
  likedSongs songs [not null]
  followingArtists artists [not null]
}

Table Genre {
  id Int [pk, increment]
  slug String [unique, not null]
  name String [not null]
  songs songs [not null]
  artists artists [not null]
  playlists Playlist [not null]
  albums Album [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table songs {
  slug String [unique, not null]
  id Int [pk, increment]
  name String [not null]
  album Album [not null]
  albumId Int [not null]
  year String
  releaseDate DateTime [default: `now()`]
  duration Int
  label String
  primaryArtists artists [not null]
  featuredArtists artists [not null]
  explicitContent Int
  playCount Int
  language String
  hasLyrics Boolean [not null, default: false]
  url String [not null]
  copyright String
  contentType ContentType [not null]
  images Image [not null]
  primaryImage String
  downloadUrls SongDownloadUrl [not null]
  origin String
  lyricsSnippet String
  encryptedMediaUrl String
  encryptedMediaPath String
  mediaPreviewUrl String
  permaUrl String
  albumUrl String
  rightId Int
  kbps320 Boolean
  isDolbyContent Boolean
  disabled String
  disabledText String
  cacheState String
  vcode String
  trillerAvailable Boolean [not null]
  labelUrl String
  playLists Playlist [not null]
  addedBy users [not null]
  userId Int [not null]
  genres Genre [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  likeds users [not null]
}

Table artists {
  slug String [unique, not null]
  id Int [pk, increment]
  name String [not null]
  creatorType ContentType [not null]
  songs songs [not null]
  primaryImage String
  followerCount Int [not null]
  fanCount Int [not null]
  isVerified Boolean [not null]
  dominantLanguage String
  dominantType String
  bio String
  dob String
  fb String
  twitter String
  wiki String
  availableLanguages String
  isRadioPresent Boolean
  isBand Boolean [not null]
  bandMembers artists [not null]
  bandMemberOf artists [not null]
  primaryAlbums Album [not null]
  featuredAlbums Album [not null]
  featuredSongs songs [not null]
  images Image [not null]
  albums Album [not null]
  playlists Playlist [not null]
  addedBy users [not null]
  userId Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  genres Genre [not null]
  followers users [not null]
}

Table Album {
  slug String [unique, not null]
  id Int [pk, increment]
  name String [not null]
  releaseYear String
  songs songs [not null]
  coverImage String
  contentType ContentType [not null]
  duration Int
  price Int
  mainArtist artists
  mainArtistSlug String
  genres Genre [not null]
  currency String
  primaryArtists artists [not null]
  featuredArtists artists [not null]
  label String
  image Image [not null]
  language String
  origin String
  mediaPreviewUrl String
  likes Int [not null]
  plays Int [not null]
  isPremium Boolean [not null]
  disabled Boolean [not null]
  disabledText String
  releaseDate DateTime [default: `now()`]
  trillerAvailable Boolean [not null]
  trillerUrl String
  addedBy users [not null]
  userId Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Playlist {
  slug String [unique, not null]
  name String [not null]
  id Int [pk, increment]
  primaryImage String
  username String [not null]
  type String
  year String
  subtitle String
  language String
  duration Int
  images Image [not null]
  url String [not null]
  artists artists [not null]
  songs songs [not null]
  genres Genre [not null]
  addedBy users [not null]
  userId Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Image {
  id Int [pk, increment]
  quality String [not null]
  link String [not null]
  artist artists
  artistId Int
  album Album
  albumId Int
  playlist Playlist
  playlistId Int
  song songs
  songId Int
}

Table SongDownloadUrl {
  id Int [pk, increment]
  quality String [not null]
  link String [not null]
  song songs [not null]
  songId Int [not null]
}

Enum ContentType {
  MUSIC
  PODCAST
  AUDIOBOOK
  POEM
  PAPER
}

Ref: Article.userId > users.id

Ref: songs.albumId > Album.id

Ref: songs.userId > users.id

Ref: artists.userId > users.id

Ref: Album.mainArtistSlug > artists.slug

Ref: Album.userId > users.id

Ref: Playlist.userId > users.id

Ref: Image.artistId > artists.id

Ref: Image.albumId > Album.id

Ref: Image.playlistId > Playlist.id

Ref: Image.songId > songs.id

Ref: SongDownloadUrl.songId > songs.id